# pokemons_assincronos

./: .gitignore  pyproject.toml
examples/: evolucao.py  evolucao_v2.py  evolucao_v3.py  exemplo_asyncio__1.py  exemplo_asyncio__v2.py
src/pokemons/: evolucao__v4.py  pokes.py
tests/: test_evolucao__v4.py
